# how

./: .eslintrc.cjs  .gitignore  .prettierrc  Cargo.toml  DESIGN.md  README.md  default.nix  flake.nix  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
apps/launcher/dnas/how/: dna.yaml  how.dna
apps/launcher/ui/: .gitignore  index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
apps/launcher/ui/src/: how-app.ts  index.ts
apps/launcher/workdir/: happ.yaml  web-happ.yaml
dna/workdir/dna/: dna.yaml
dna/workdir/happ/: happ.yaml
dna/zomes/how/: Cargo.toml
dna/zomes/how/src/: alignment.rs  document.rs  error.rs  lib.rs  signals.rs  tree.rs  unit.rs  utils.rs
dna/zomes/how/tests/: behaviors.rs
dna/zomes/how_core/: Cargo.toml
dna/zomes/how_core/src/: lib.rs
dna/zomes/profiles/: Cargo.toml
dna/zomes/profiles/src/: lib.rs
dna/zomes/profiles_core/: Cargo.toml
dnas/how/workdir/: dna.yaml
dnas/how/zomes/coordinator/file_storage/: Cargo.toml
dnas/how/zomes/coordinator/file_storage/src/: lib.rs
dnas/how/zomes/coordinator/how/: Cargo.toml
dnas/how/zomes/coordinator/how/src/: document.rs  error.rs  lib.rs  signals.rs  tree.rs  unit.rs  utils.rs
dnas/how/zomes/coordinator/profiles/: Cargo.toml
dnas/how/zomes/integrity/file_storage/: Cargo.toml
dnas/how/zomes/integrity/file_storage/src/: lib.rs
dnas/how/zomes/integrity/how/: Cargo.toml
dnas/how/zomes/integrity/how/src/: lib.rs
dnas/how/zomes/integrity/profiles/: Cargo.toml
libs/ui/: .eslintrc.js  .gitignore  package.json  rollup.config.js  tsconfig.json
libs/ui/src/: controls.ts  how.service.ts  how.store.ts  index.ts  init.ts  sharedStyles.ts  types.ts
libs/ui/src/elements/: how-agent-list.ts  how-comment-box.ts  how-comment.ts  how-controller.ts  how-document.ts  how-edit-agent-list.ts  how-my-profile-dialog.ts  how-new-section-dialog.ts  how-node.ts  how-section.ts  how-tree.ts  how-unit-details.ts  how-unit-dialog.ts  how-unit.ts
libs/zomes/how/: Cargo.toml
libs/zomes/how/src/: document.rs  error.rs  lib.rs  signals.rs  tree.rs  unit.rs  utils.rs
libs/zomes/how/tests/: behaviors.rs  tree.rs
libs/zomes/how_core/: Cargo.toml
libs/zomes/how_core/src/: lib.rs
libs/zomes/profiles/: Cargo.toml
libs/zomes/profiles_core/: Cargo.toml
libs/zomes/profiles_core/src/: lib.rs
nix/: sources.json
tests/: .gitignore  package.json
tests/src/: common.ts  how.ts  index.ts  profile.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/app/: index.html  package.json  tsconfig.json  vite.config.ts
ui/app/src/: holochain-app.ts
ui/applet/: package.json  rollup.config.js  tsconfig.json  vite.config.ts
ui/applet/demo/: index.html
ui/applet/src/: gather-applet-main.ts  index.ts  we-applet.ts
ui/applet/workdir/: web-happ.yaml
ui/apps/how/: index.html  package.json  rollup.config.js  tsconfig.json
ui/apps/how/src/: how-app.ts
ui/lib/: package.json  rollup.config.js  tsconfig.json
ui/lib/src/: controls.ts  how.service.ts  how.store.ts  index.ts  init.ts  sharedStyles.ts  types.ts
ui/lib/src/elements/: how-agent-list.ts  how-alignment-dialog.ts  how-alignment.ts  how-comment-box.ts  how-comment.ts  how-confirm.ts  how-controller.ts  how-document-comment.ts  how-document-dialog.ts  how-document-section.ts  how-document.ts  how-edit-agent-list.ts  how-my-profile-dialog.ts  how-new-section-dialog.ts  how-new-section.dialog.ts  how-node.ts  how-section-details.ts  how-section.ts  how-tree.ts  how-unit-details.ts  how-unit-dialog.ts  how-unit.ts  info-item.ts  svg-button.ts  utils.ts
ui/src/: holochain-app.ts  how.service.ts  how.store.ts  images.ts  index.ts  initHolochain.ts  initSimple.ts  types.ts  util.ts  we.ts
ui/src/elements/: how-agent-list.ts  how-collect.ts  how-comment.ts  how-confirm.ts  how-controller.ts  how-document.ts  how-edit-agent-list.ts  how-my-profile-dialog.ts  how-node.ts  how-section.ts  how-settings.ts  how-tree.ts  how-unit-details.ts  how-unit-dialog-edit.ts  how-unit-dialog.ts  how-unit.ts  svg-button.ts  svg-icons.ts
vuehow/: README.md  package-lock.json  package.json
vuehow/src/: App.vue
vuehow/src/composables/: how.service.ts  useHolochain.ts
vuehow/src/router/: index.ts
vuehow/src/types/: types.ts
vuehow/src/views/: HomeView.vue
we_dev/: .gitignore  config.json  config.ts
workdir/: happ.yaml  web-happ.yaml
