[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.3"
hdk = "=0.1.3"
serde = "=1.0.145"

[workspace.dependencies.file_storage]
path = "dnas/how/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/how/zomes/integrity/file_storage"

[workspace.dependencies.how]
path = "dnas/how/zomes/coordinator/how"

[workspace.dependencies.how_integrity]
path = "dnas/how/zomes/integrity/how"

[workspace.dependencies.profiles]
path = "dnas/how/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/how/zomes/integrity/profiles"

