[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.0-beta-dev.31"
hdk = "0.3.0-beta-dev.35"
serde = "1"

[workspace.dependencies.how]
path = "dnas/how/zomes/coordinator/how"

[workspace.dependencies.how_integrity]
path = "dnas/how/zomes/integrity/how"

[workspace.dependencies.profiles]
path = "dnas/how/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/how/zomes/integrity/profiles"

