[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "how"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "how"

[dependencies]
chrono = {version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99"
serde = "1.0.123"
thiserror = "1.0.20"
hdk = "0.0.114"
holo_hash = {version = "0.0.12", features = ["encoding"]}

[dev-dependencies]
holochain = { version = "0.0.114", default-features = false, features = ["test_utils"] }
tokio = {version = "1.3", features = ["full"]}
futures = { version = "0.3.1", default-features = false }
