[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "profiles"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", tag = "for-hc-v0.0.122", package = "hc_zome_profiles"}

hdk = "0.0.118"