[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "how"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "how"

[dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
serde = "1"
thiserror = "1.0.20"
how_core = { path = "../how_core" }
hdk = {version = "0.0.163", features = ["encoding"]}


[dev-dependencies]
holochain = { version = "0.0.175", default-features = false, features = ["test_utils"] }
tokio = {version = "1.3", features = ["full"]}
futures = { version = "0.3.1", default-features = false }
