[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "profiles"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
profiles = {git = "https://github.com/holochain-open-dev/profiles", branch = "for-hdk-v0.1.0-beta-rc.1", package = "hc_zome_profiles_coordinator"}
