[package]
name = "how"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "how"

[dependencies]
thiserror = "1.0.20"

hdk = { workspace = true }

serde = { workspace = true }

how_integrity = { workspace = true } 
indexmap = "=1.9.1"
wast = "=39.0.0"
enumset = "=1.0.8"
wasm-bindgen = "=0.2.82"