[package]
name = "profiles"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

profiles_integrity = { workspace = true }
hc_zome_profiles_coordinator = "0.2"

indexmap = "=1.9.1"
wast = "=39.0.0"
enumset = "=1.0.8"
wasm-bindgen = "=0.2.82"