[package]
name = "profiles_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
hc_zome_profiles_integrity = "0.2"
hdi = { workspace = true }

serde = { workspace = true }
indexmap = "=1.9.1"
wast = "=39.0.0"
enumset = "=1.0.8"
wasm-bindgen = "=0.2.82"